fixed rows causing content to overflow page
very very very very frustrating, gutted index

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,7 @@
+* {
+    box-sizing: border-box;
+}
+
 :root {
     --sl-color-primary-50: white;
     --sl-color-primary-100: white;
@@ -96,9 +100,9 @@
 html,
 body {
     width: 100%;
-    height: 100%
+    margin: 0;
+    /* overflow-x: hidden; */
 }
-
 
 footer {
     background-color: var(--colorBlue-100);
@@ -200,31 +204,18 @@ footer {
     padding: 0;
 }
 
-#container-1 {
-    padding: 0;
-    position: relative;
-}
-
 #row-2_container-1 {
     background-color: rgb(224, 48, 48);
     height: 300px
 }
 
-.card_container {
-    overflow: hidden;
 
-    >img {
-        display: block;
-        margin: auto;
-        height: 100%;
-        max-height: auto;
-        max-width: 514px;
-        width: auto;
-
-    }
-}
 
 /* Index Rows */
+#row-1,
+#row-4 {
+    max-width: auto;
+}
 #row-3 {
     margin: 0 auto;
 }
@@ -234,11 +225,19 @@ footer {
 }
 
 /* Index Columns */
-#row-1_column-1,
-#row-2_column-1 {
-    background-color: var(--colorBlue-100);
-}
+#row-1_column-1 {
 
+}
+#row-2_column-1 {
+    padding-right: 0 !important;
+    
+  background-color: pink !important;
+    
+}
+#row-1_column-1 {
+    
+   
+}
 /* Hero */
 #hero_image {
     display: block;
@@ -246,6 +245,7 @@ footer {
     width: 100%;
 }
 
+/*
 #free_estimate {
     display: flex;
     flex-direction: row;
@@ -258,10 +258,10 @@ footer {
     color: rgb(0, 0, 0);
     backdrop-filter: blur(10px);
     width: 100%;
-    /*max-width: 425px;*/
+    max-width: 425px;
     justify-content: center;
     font-size: 25px;
-    /* border-radius: 9999px 0 0 9999px; */
+     border-radius: 9999px 0 0 9999px;
     box-shadow:
         5px 5px 15px rgba(0, 0, 0, 0.504),
         0 5px 15px rgba(0, 0, 0, 0.243) inset;
@@ -276,6 +276,7 @@ footer {
         padding-top: 5px;
     }
 }
+*/
 
 /* Tab Group */
 .tab_panel::part(nav):hover {
@@ -298,10 +299,11 @@ footer {
 }
 
 .card-body {
-    width: 600px;
+
     height: auto;
 
 }
+
 
 /* Services */
 
@@ -475,9 +477,9 @@ footer {
 
 .divider-img-410291 {
     position: relative;
-    width: 500%;
+    width: 100%;
     height: 108px;
-
+    
     transform: scale(1, -1);
     top: -10px;
     left: 0px;
@@ -486,10 +488,10 @@ footer {
 
 .divider-img-410291-white {
     position: relative;
-    width: 500%;
+    width: 100%;
     height: 108px;
     transform: scale(1, -1);
-    top: -10px;
+    top: 0px;
     left: 0px;
     fill: rgb(255, 255, 255)
 }
